# pytest-ci

./: .gitignore  CMakeLists.txt  FindPytest.cmake  pixi.toml
.github/workflows/: ci.yml  pixi.yml  v2-windows.yml
